Added validateRefreshToken middleware Minor refactoring Still need to test refresh endpoint Added refresh endpoint swagger documentation
