# src/validation/schemas/authentication/refresh.schema.ts
@@ -1,9 +1,0 @@
-import { z } from "zod";
-
-const authenticationRefreshSchema = z.object({
-  body: z.object({
-    refreshToken: z.string(),
-  }),
-});
-
-export default authenticationRefreshSchema;
